kubernetes/argocd/applications/boardchan/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardchan
  labels:
    app: boardchan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boardchan
  template:
    metadata:
      labels:
        app: boardchan
    spec:
      containers:
      - name: boardchan
        image: registry.digitalocean.com/kubeden/boardchan:17b7a4b
        ports:
        - containerPort: 3000
