kubernetes/argocd/applications/boardchan/service.yml
apiVersion: v1
kind: Service
metadata:
  name: boardchan-service
  namespace: boardchan
spec:
  selector:
    app: boardchan
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
