kubernetes/argocd/applications/boardchan/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boardchan-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: boardchan.com
spec:
  tls:
  - hosts:
    - boardchan.com
    secretName: boardchan-client-tls
  rules:
  - host: boardchan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: boardchan-service
            port: 
              number: 80
